# combinator

./: README.md  changelog.md  combinator.cabal  stack.yaml
lib/Combinator/: Subset.hs
test/: SubsetTest.hs  TestCommon.hs
