name:                   combinator
version:                0.2.0
synopsis:               Combinatorics
description:            Please see README.md
homepage:               https://github.com/tserduke/combinator#readme
bug-reports:            https://github.com/tserduke/combinator/issues
license:                BSD3
license-file:           LICENSE
author:                 Taras Serduke
maintainer:             taras.serduke@gmail.com
copyright:              2016 Taras Serduke
category:               Algorithms, Math
build-type:             Simple
cabal-version:          >= 1.10
extra-source-files:     README.md
                        changelog.md

source-repository head
    type:               git
    location:           https://github.com/tserduke/combinator.git


library
    hs-source-dirs:     lib
    exposed-modules:    Combinator.Subset
    build-depends:      base < 5,
                        hot
    default-language:   Haskell2010
    default-extensions:
    ghc-options:        -O2 -Wall


test-suite subset
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            SubsetTest.hs
    build-depends:      base < 5,
                        combinator,
                        hot,
                        hspec,
                        QuickCheck
    default-language:   Haskell2010
    default-extensions: DataKinds
                        KindSignatures
                        ScopedTypeVariables
    ghc-options:        -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
